# datalog

./: .gitignore  .gitmodules  .header  .merlin  .ocamlinit  .travis.yml  CHANGES.md  LICENSE  META  Makefile  README  README.md  README.rst  TODO  _oasis  _tags  ast.ml  bottomUp.ml  bottomUp.mli  bottomUpParser.mly  datalog.ml  datalog.mli  datalog.mllib  datalog.mlpack  datalog.odocl  datalog.opam  datalogAst.ml  datalogLexer.mll  datalogParser.mly  datalog_cli.ml  default.ml  default.mli  dune  dune-project  index.html  index.md  lexer.mll  logic.ml  logic.mli  myocamlbuild.ml  (+12 more)
.github/workflows/: main.yml
0.5.2/: BottomUp.Hashcons.html  BottomUp.Make.html  BottomUp.S.Query.html  BottomUp.S.html  BottomUp.SymbolType.html  BottomUp.Univ.html  BottomUp.html  BottomUpAst.html  BottomUpLexer.html  BottomUpParser.html  CamlInterface.Logic.html  CamlInterface.Parse.html  CamlInterface.Rel1.html  CamlInterface.Rel2.html  CamlInterface.Rel3.html  CamlInterface.RelList.html  CamlInterface.Univ.html  CamlInterface.html  Default.StringSymbol.html  Default.html  TopDown.CONST.html  TopDown.Default.html  TopDown.Make.html  TopDown.MakeParse.html  TopDown.PARSABLE_CONST.html  TopDown.PARSE.html  TopDown.S.BuiltinFun.html  TopDown.S.C.Tbl.html  TopDown.S.C.html  TopDown.S.CVariantTbl.html  TopDown.S.Const.html  TopDown.S.DB.html  TopDown.S.Index.html  TopDown.S.Lit.html  TopDown.S.Rewriting.html  TopDown.S.Subst.html  TopDown.S.T.Tbl.html  TopDown.S.T.html  TopDown.S.TVariantTbl.html  TopDown.S.html  (+73 more)
0.6/: index.html
0.6/datalog/: index.html
0.6/datalog/Datalog/: index.html
0.6/datalog/Datalog__AST/: index.html
0.6/datalog/Datalog__BottomUp/: index.html
0.6/datalog/Datalog__Default/: index.html
0.6/datalog/Datalog__Lexer/: index.html
0.6/datalog/Datalog__Parser/: index.html
0.6/datalog/Datalog__Version/: index.html
0.6/datalog/Datalog_caml_interface/: index.html
0.6/datalog/Datalog_top_down/: index.html
0.6/datalog/Datalog_top_down__/: index.html
0.6/datalog/Datalog_top_down__AST/: index.html
datalog/: bitvector.ml  const.mlp  dB.ml  dB.mli  index.html  index.ml  lexer.mll  logic.ml  logic.mli  parser.mly  symbols.ml  utils.ml
datalog/Datalog/: index.html
datalog/Datalog_caml_interface/: index.html
datalog/Datalog_top_down/: index.html
datalog/Datalog_unix/: index.html
src/: META  ast.ml  base.ml  base.mli  bottomUp.ml  bottomUp.mli  bottomUpAst.ml  camlInterface.ml  camlInterface.mli  datalog.mldylib  datalog.mlpack  datalog_cli.ml  lexer.mll  parser.mly  topDown.ml  topDown.mli  topDownAst.ml  topDownCli.ml  topDownLexer.mll  topDownParser.mly  topDownUnix.ml  topDownUnix.mli
src/bottom_up/: AST.mli  Lexer.mll  Parser.mly  bottomUp.ml  bottomUp.mli  bottomUpAst.ml  bottomUpAst.mli  bottomUpLexer.mll  bottomUpParser.mly  default.ml  default.mli  dune
src/bottom_up_cli/: datalog_cli.ml  dune
src/caml_interface/: Datalog_caml_interface.ml  Datalog_caml_interface.mli  dune
src/lib/: sequence.ml  sequence.mli  util.ml  util.mli
src/top_down/: AST.ml  Datalog_top_down.ml  Datalog_top_down.mli  Lexer.mll  Parser.mly  dune
src/top_down_cli/: dune  topDownCli.ml
src/unix/: Datalog_unix.ml  Datalog_unix.mli  datalog_unix.ml  datalog_unix.mldylib  datalog_unix.mli  dune
tests/: clique10.pl  clique100.pl  clique1000.pl  clique10000.pl  clique200.pl  clique500.pl  clique_gen.py  generate.py  graph10.pl  graph100.pl  graph1000.pl  graph10000.pl  graph1500.pl  graph200.pl  graph2000.pl  graph500.pl  graph5000.pl  graph_gen.py  induction10.pl  induction100.pl  induction1000.pl  induction10000.pl  induction1500.pl  induction200.pl  induction2000.pl  induction500.pl  induction5000.pl  induction50000.pl  induction_gen.py  run.ml  run_tests.ml  ship.pl  small.pl  testLogic.ml  test_logic.ml
(+243 files in other folders)
