opam-version: "2.0"
name: "datalog"
version: "0.6"
synopsis: "An in-memory datalog implementation for OCaml"
maintainer: "simon.cruanes.2007@m4x.org"
authors: ["Simon Cruanes"]
homepage: "https://github.com/c-cube/datalog"
license: "BSD-2-Clause"
doc: ["https://c-cube.github.io/datalog"]
tags: [
  "datalog"
  "relational"
  "query"
  "prolog"
]
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name] {with-doc}
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune"
  "ocaml" { >= "4.03" }
  "odoc" {with-doc}
  "mdx" { >= "1.3" & with-test}
]
depopts: [
  "num"
]
dev-repo: "git://github.com/c-cube/datalog"
bug-reports: "https://github.com/c-cube/datalog/issues"
