
(rule
  (targets version.ml)
  (action
    (with-stdout-to %{targets}
      (echo "let version = \"%{version:datalog}\""))))

(library
  (name datalog)
  (public_name datalog)
  (synopsis "An in-memory datalog implementation for OCaml")
  (libraries)
  (flags :standard -color always -safe-string -warn-error -a+8 -w -50))

(ocamlyacc (modules Parser))
(ocamllex (modules Lexer))
